PP-11152 Fixes for PR